--- a/index.html
+++ b/index.html
@@ -19,44 +19,61 @@
     </header>
     <hr>
     <main>
-     <h2>Le mie spese</h2>
-     <section>
-        <h2>Le Mie Spese</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Numero</th>
-                    <th>Descrizione</th>
-                    <th>Costo</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>1</th>
-                    <th>Biglietto Aereo</th>
-                    <th>120€</th>
-                </tr>
-                <tr>
-                    <th>1</th>
-                    <th>Biglietto Aereo</th>
-                    <th>120€</th>
-                </tr>
-                <tr>
-                    <th>1</th>
-                    <th>Biglietto Aereo</th>
-                    <th>360€</th>
-                </tr>
-            </tbody>
-            <tfoot>
-                <tr>
-                    <th>totale</th>
-                    <th></th>
-                    <th>120€</th>
-                </tr>
-            </tfoot>
-        </table>
-        <hr>
-    </section>
+        <h2>Le mie spese</h2>
+        <section>
+            <h2>Le Mie Spese</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>1</th>
+                        <th>Biglietto Aereo</th>
+                        <th>120€</th>
+                    </tr>
+                    <tr>
+                        <th>1</th>
+                        <th>Biglietto Aereo</th>
+                        <th>120€</th>
+                    </tr>
+                    <tr>
+                        <th>1</th>
+                        <th>Biglietto Aereo</th>
+                        <th>360€</th>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <th>totale</th>
+                        <th></th>
+                        <th>120€</th>
+                    </tr>
+                </tfoot>
+            </table>
+            <hr>
+        </section>
+        <h2>Cose da fare </h2>
+        <ul>
+            <li>visitare london tower</li>
+            <li> visitare greenwich</li>
+            <li> fish and chips </li>
+            <hr>
+
+
+
+
+
+
+
+
+        </ul>
+
+
 
     </main>
     <footer>
