add:second list

--- a/index.html
+++ b/index.html
@@ -58,22 +58,34 @@
             <hr>
         </section>
         <h2>Cose da fare </h2>
+
         <ul>
             <li>visitare london tower</li>
             <li> visitare greenwich</li>
             <li> fish and chips </li>
             <hr>
-
-
-
-
-
-
-
-
         </ul>
 
+        <section>
+            <ol>
+                <span>emergenza</span>
+                <li><strong>999</strong>polizia</li>
+                <li><strong>101</strong>ambulanza</li>
 
+                <li><strong>111</strong>finanza</li>
+
+
+                <span>hotel</span>
+                <li><strong>buckingahm</strong>via 114 all streeet</li>
+                <li><strong>cioffi</strong>via peramandola</li>
+                
+
+                <span>aereo</span>
+                <li><strong>volo</strong>ore 9:00</li>
+                
+
+            </ol>
+        </section>
 
     </main>
     <footer>
