--- a/index.html
+++ b/index.html
@@ -78,18 +78,22 @@
                 <span>hotel</span>
                 <li><strong>buckingahm</strong>via 114 all streeet</li>
                 <li><strong>cioffi</strong>via peramandola</li>
-                
+
 
                 <span>aereo</span>
                 <li><strong>volo</strong>ore 9:00</li>
-                
+
 
             </ol>
         </section>
 
     </main>
     <footer>
-
+        <h2>Le Foto</h2>
+        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg"
+            alt="DESCRIOZIONE BEALLA">
+        <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n"
+            alt="DESCRIZIONE BELLA">
     </footer>
 </body>
 
